Creación relacion ManyToMany entre GameLobby y User para jugadores en lobby